[package]
name = "markdownrunner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["tokio"] }
clap = { version = "4.4.6", features = ["derive"] }
clap-stdin = "0.2.1"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
